# AI-dairy

./: .gitignore  README.md  Rust_Backend_Build_Summary.md  docker-compose.yml
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend-rust/: .gitignore  Cargo.toml  README.md
backend-rust/src/: app.rs  auth.rs  config.rs  db.rs  main.rs  routes.rs
backend-rust/src/handlers/: auth.rs  conversation.rs  health.rs  inbox.rs  insights.rs  journal.rs  memory.rs  mod.rs  settings.rs  streaks.rs
backend-rust/src/models/: conversation.rs  inbox.rs  insight.rs  journal.rs  memory.rs  mod.rs  settings.rs  streak.rs  user.rs
backend-rust/src/services/: auth_service.rs  chat_service.rs  insights_service.rs  journal_service.rs  memory_service.rs  mod.rs  openai_service.rs
backend-rust/src/utils/: error.rs  jwt.rs  mod.rs  response.rs  validator.rs
backend-rust/tests/: auth_tests.rs  conversation_tests.rs  integration.rs
backend/src/: app.ts  env.ts  index.ts
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/app/: settings_prefs.dart  theme.dart  theme_controller.dart
mobile/lib/auth/: login_screen.dart
mobile/lib/home/: business_dna_screen.dart  clarity_timeline_screen.dart  conversation_history_screen.dart  home_shell.dart  journal_screen.dart  presence_screen.dart  (+7 more)
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
(+38 files in other folders)
