[package]
name = "backend-rust"
version = "0.1.0"
authors = ["Ai Diary"]
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
bcrypt = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
validator = { version = "0.16", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.4", features = ["cors", "trace"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
